parser/parser.output
Terminals unused in grammar

   '*'
   '/'
   '%'
   CONTINUE
   PRINT
   NOT
   OPERATOR


Grammar

    0 $accept: CompUnit $end

    1 CompUnit: CompUnitItem
    2         | CompUnit CompUnitItem

    3 CompUnitItem: FuncDef
    4             | Decl

    5 Decl: ConstDecl
    6     | VarDecl

    7 ConstDecl: CONST BType ConstDefList SEMI

    8 ConstDefList: ConstDef
    9             | ConstDefList COMMA ConstDef

   10 ConstDef: ID ConstSubscriptList ASSIGN ConstInitVal

   11 ConstInitVal: Exp
   12             | LBRACE ConstInitValList RBRACE

   13 ConstInitValList: ConstInitVal
   14                 | ConstInitValList COMMA ConstInitVal

   15 VarDecl: BType VarDefList SEMI

   16 VarDefList: VarDef
   17           | VarDefList COMMA VarDef

   18 VarDef: ID ConstSubscriptList
   19       | ID ConstSubscriptList ASSIGN InitVal

   20 InitVal: Exp
   21        | LBRACE RBRACE
   22        | LBRACE InitValList RBRACE

   23 InitValList: InitVal
   24            | InitValList COMMA InitVal

   25 FuncDef: BType ID LP RP Block
   26        | BType ID LP FuncFParams RP Block

   27 FuncFParam: BType ID
   28           | BType ID LBRACK RBRACK
   29           | BType ID LBRACK RBRACK NonEmptyConstSubscriptList

   30 FuncFParams: FuncFParam
   31            | FuncFParams COMMA FuncFParam

   32 FuncRParams: Exp
   33            | FuncRParams COMMA Exp

   34 BType: VOID
   35      | INT
   36      | FLOAT

   37 Block: LBRACE BlockItem RBRACE

   38 BlockItem: /* empty */
   39          | BlockItem Item

   40 Item: VarDecl
   41     | Stmt

   42 ConstSubscriptList: /* empty */
   43                   | ConstSubscriptList LBRACK NUMBER RBRACK

   44 NonEmptyConstSubscriptList: LBRACK NUMBER RBRACK
   45                           | NonEmptyConstSubscriptList LBRACK NUMBER RBRACK

   46 SubscriptList: /* empty */
   47              | SubscriptList LBRACK Exp RBRACK

   48 LVal: ID SubscriptList

   49 Stmt: ID LP RP SEMI
   50     | ID LP FuncRParams RP SEMI
   51     | LVal ASSIGN Exp SEMI
   52     | RETURN Exp SEMI
   53     | IF LP LOrExp RP Stmt
   54     | IF LP LOrExp RP Stmt ELSE Stmt
   55     | WHILE LP LOrExp RP Stmt
   56     | Block
   57     | BREAK SEMI

   58 Exp: LOrExp

   59 LOrExp: LAndExp
   60       | LOrExp LOR LAndExp

   61 LAndExp: EqExp
   62        | LAndExp LAND EqExp

   63 EqExp: RelExp
   64      | EqExp EQ RelExp
   65      | EqExp NE RelExp

   66 RelExp: AddExp
   67       | RelExp LT AddExp
   68       | RelExp LE AddExp
   69       | RelExp GT AddExp
   70       | RelExp GE AddExp

   71 AddExp: MulExp
   72       | AddExp PLUS MulExp
   73       | AddExp MINUS MulExp

   74 MulExp: UnaryExp
   75       | MulExp MUL UnaryExp
   76       | MulExp DIV UnaryExp
   77       | MulExp MOD UnaryExp

   78 UnaryExp: PrimaryExp
   79         | '+' UnaryExp
   80         | '-' UnaryExp

   81 PrimaryExp: LP Exp RP
   82           | ID LP RP
   83           | ID LP FuncRParams RP
   84           | LVal
   85           | NUMBER
   86           | STRING
   87           | CHAR_CONST


Terminals, with rules where they appear

$end (0) 0
'%' (37)
'*' (42)
'+' (43) 79
'-' (45) 80
'/' (47)
error (256)
LOR (258) 60
LAND (259) 62
NE (260) 65
EQ (261) 64
GE (262) 70
GT (263) 69
LE (264) 68
LT (265) 67
UMINUS (266)
LOWER_THAN_ELSE (267)
ELSE (268) 54
ID (269) 10 18 19 25 26 27 28 29 48 49 50 82 83
NUMBER (270) 43 44 45 85
CHAR_CONST (271) 87
STRING (272) 86
VOID (273) 34
INT (274) 35
FLOAT (275) 36
CONST (276) 7
IF (277) 53 54
WHILE (278) 55
RETURN (279) 52
BREAK (280) 57
CONTINUE (281)
PRINT (282)
ASSIGN (283) 10 19 51
PLUS (284) 72
MINUS (285) 73
MUL (286) 75
DIV (287) 76
MOD (288) 77
NOT (289)
LP (290) 25 26 49 50 53 54 55 81 82 83
RP (291) 25 26 49 50 53 54 55 81 82 83
LBRACE (292) 12 21 22 37
RBRACE (293) 12 21 22 37
LBRACK (294) 28 29 43 44 45 47
RBRACK (295) 28 29 43 44 45 47
SEMI (296) 7 15 49 50 51 52 57
COMMA (297) 9 14 17 24 31 33
OPERATOR (298)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
CompUnit (50)
    on left: 1 2, on right: 0 2
CompUnitItem (51)
    on left: 3 4, on right: 1 2
Decl (52)
    on left: 5 6, on right: 4
ConstDecl (53)
    on left: 7, on right: 5
ConstDefList (54)
    on left: 8 9, on right: 7 9
ConstDef (55)
    on left: 10, on right: 8 9
ConstInitVal (56)
    on left: 11 12, on right: 10 13 14
ConstInitValList (57)
    on left: 13 14, on right: 12 14
VarDecl (58)
    on left: 15, on right: 6 40
VarDefList (59)
    on left: 16 17, on right: 15 17
VarDef (60)
    on left: 18 19, on right: 16 17
InitVal (61)
    on left: 20 21 22, on right: 19 23 24
InitValList (62)
    on left: 23 24, on right: 22 24
FuncDef (63)
    on left: 25 26, on right: 3
FuncFParam (64)
    on left: 27 28 29, on right: 30 31
FuncFParams (65)
    on left: 30 31, on right: 26 31
FuncRParams (66)
    on left: 32 33, on right: 33 50 83
BType (67)
    on left: 34 35 36, on right: 7 15 25 26 27 28 29
Block (68)
    on left: 37, on right: 25 26 56
BlockItem (69)
    on left: 38 39, on right: 37 39
Item (70)
    on left: 40 41, on right: 39
ConstSubscriptList (71)
    on left: 42 43, on right: 10 18 19 43
NonEmptyConstSubscriptList (72)
    on left: 44 45, on right: 29 45
SubscriptList (73)
    on left: 46 47, on right: 47 48
LVal (74)
    on left: 48, on right: 51 84
Stmt (75)
    on left: 49 50 51 52 53 54 55 56 57, on right: 41 53 54 55
Exp (76)
    on left: 58, on right: 11 20 32 33 47 51 52 81
LOrExp (77)
    on left: 59 60, on right: 53 54 55 58 60
LAndExp (78)
    on left: 61 62, on right: 59 60 62
EqExp (79)
    on left: 63 64 65, on right: 61 62 64 65
RelExp (80)
    on left: 66 67 68 69 70, on right: 63 64 65 67 68 69 70
AddExp (81)
    on left: 71 72 73, on right: 66 67 68 69 70 72 73
MulExp (82)
    on left: 74 75 76 77, on right: 71 72 73 75 76 77
UnaryExp (83)
    on left: 78 79 80, on right: 74 75 76 77 79 80
PrimaryExp (84)
    on left: 81 82 83 84 85 86 87, on right: 78


State 0

    0 $accept: . CompUnit $end

    VOID   shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    CONST  shift, and go to state 4

    CompUnit      go to state 5
    CompUnitItem  go to state 6
    Decl          go to state 7
    ConstDecl     go to state 8
    VarDecl       go to state 9
    FuncDef       go to state 10
    BType         go to state 11


State 1

   34 BType: VOID .

    $default  reduce using rule 34 (BType)


State 2

   35 BType: INT .

    $default  reduce using rule 35 (BType)


State 3

   36 BType: FLOAT .

    $default  reduce using rule 36 (BType)


State 4

    7 ConstDecl: CONST . BType ConstDefList SEMI

    VOID   shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3

    BType  go to state 12


State 5

    0 $accept: CompUnit . $end
    2 CompUnit: CompUnit . CompUnitItem

    $end   shift, and go to state 13
    VOID   shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    CONST  shift, and go to state 4

    CompUnitItem  go to state 14
    Decl          go to state 7
    ConstDecl     go to state 8
    VarDecl       go to state 9
    FuncDef       go to state 10
    BType         go to state 11


State 6

    1 CompUnit: CompUnitItem .

    $default  reduce using rule 1 (CompUnit)


State 7

    4 CompUnitItem: Decl .

    $default  reduce using rule 4 (CompUnitItem)


State 8

    5 Decl: ConstDecl .

    $default  reduce using rule 5 (Decl)


State 9

    6 Decl: VarDecl .

    $default  reduce using rule 6 (Decl)


State 10

    3 CompUnitItem: FuncDef .

    $default  reduce using rule 3 (CompUnitItem)


State 11

   15 VarDecl: BType . VarDefList SEMI
   25 FuncDef: BType . ID LP RP Block
   26        | BType . ID LP FuncFParams RP Block

    ID  shift, and go to state 15

    VarDefList  go to state 16
    VarDef      go to state 17


State 12

    7 ConstDecl: CONST BType . ConstDefList SEMI

    ID  shift, and go to state 18

    ConstDefList  go to state 19
    ConstDef      go to state 20


State 13

    0 $accept: CompUnit $end .

    $default  accept


State 14

    2 CompUnit: CompUnit CompUnitItem .

    $default  reduce using rule 2 (CompUnit)


State 15

   18 VarDef: ID . ConstSubscriptList
   19       | ID . ConstSubscriptList ASSIGN InitVal
   25 FuncDef: BType ID . LP RP Block
   26        | BType ID . LP FuncFParams RP Block

    LP  shift, and go to state 21

    $default  reduce using rule 42 (ConstSubscriptList)

    ConstSubscriptList  go to state 22


State 16

   15 VarDecl: BType VarDefList . SEMI
   17 VarDefList: VarDefList . COMMA VarDef

    SEMI   shift, and go to state 23
    COMMA  shift, and go to state 24


State 17

   16 VarDefList: VarDef .

    $default  reduce using rule 16 (VarDefList)


State 18

   10 ConstDef: ID . ConstSubscriptList ASSIGN ConstInitVal

    $default  reduce using rule 42 (ConstSubscriptList)

    ConstSubscriptList  go to state 25


State 19

    7 ConstDecl: CONST BType ConstDefList . SEMI
    9 ConstDefList: ConstDefList . COMMA ConstDef

    SEMI   shift, and go to state 26
    COMMA  shift, and go to state 27


State 20

    8 ConstDefList: ConstDef .

    $default  reduce using rule 8 (ConstDefList)


State 21

   25 FuncDef: BType ID LP . RP Block
   26        | BType ID LP . FuncFParams RP Block

    VOID   shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    RP     shift, and go to state 28

    FuncFParam   go to state 29
    FuncFParams  go to state 30
    BType        go to state 31


State 22

   18 VarDef: ID ConstSubscriptList .
   19       | ID ConstSubscriptList . ASSIGN InitVal
   43 ConstSubscriptList: ConstSubscriptList . LBRACK NUMBER RBRACK

    ASSIGN  shift, and go to state 32
    LBRACK  shift, and go to state 33

    $default  reduce using rule 18 (VarDef)


State 23

   15 VarDecl: BType VarDefList SEMI .

    $default  reduce using rule 15 (VarDecl)


State 24

   17 VarDefList: VarDefList COMMA . VarDef

    ID  shift, and go to state 34

    VarDef  go to state 35


State 25

   10 ConstDef: ID ConstSubscriptList . ASSIGN ConstInitVal
   43 ConstSubscriptList: ConstSubscriptList . LBRACK NUMBER RBRACK

    ASSIGN  shift, and go to state 36
    LBRACK  shift, and go to state 33


State 26

    7 ConstDecl: CONST BType ConstDefList SEMI .

    $default  reduce using rule 7 (ConstDecl)


State 27

    9 ConstDefList: ConstDefList COMMA . ConstDef

    ID  shift, and go to state 18

    ConstDef  go to state 37


State 28

   25 FuncDef: BType ID LP RP . Block

    LBRACE  shift, and go to state 38

    Block  go to state 39


State 29

   30 FuncFParams: FuncFParam .

    $default  reduce using rule 30 (FuncFParams)


State 30

   26 FuncDef: BType ID LP FuncFParams . RP Block
   31 FuncFParams: FuncFParams . COMMA FuncFParam

    RP     shift, and go to state 40
    COMMA  shift, and go to state 41


State 31

   27 FuncFParam: BType . ID
   28           | BType . ID LBRACK RBRACK
   29           | BType . ID LBRACK RBRACK NonEmptyConstSubscriptList

    ID  shift, and go to state 42


State 32

   19 VarDef: ID ConstSubscriptList ASSIGN . InitVal

    '+'         shift, and go to state 43
    '-'         shift, and go to state 44
    ID          shift, and go to state 45
    NUMBER      shift, and go to state 46
    CHAR_CONST  shift, and go to state 47
    STRING      shift, and go to state 48
    LP          shift, and go to state 49
    LBRACE      shift, and go to state 50

    InitVal     go to state 51
    LVal        go to state 52
    Exp         go to state 53
    LOrExp      go to state 54
    LAndExp     go to state 55
    EqExp       go to state 56
    RelExp      go to state 57
    AddExp      go to state 58
    MulExp      go to state 59
    UnaryExp    go to state 60
    PrimaryExp  go to state 61


State 33

   43 ConstSubscriptList: ConstSubscriptList LBRACK . NUMBER RBRACK

    NUMBER  shift, and go to state 62


State 34

   18 VarDef: ID . ConstSubscriptList
   19       | ID . ConstSubscriptList ASSIGN InitVal

    $default  reduce using rule 42 (ConstSubscriptList)

    ConstSubscriptList  go to state 22


State 35

   17 VarDefList: VarDefList COMMA VarDef .

    $default  reduce using rule 17 (VarDefList)


State 36

   10 ConstDef: ID ConstSubscriptList ASSIGN . ConstInitVal

    '+'         shift, and go to state 43
    '-'         shift, and go to state 44
    ID          shift, and go to state 45
    NUMBER      shift, and go to state 46
    CHAR_CONST  shift, and go to state 47
    STRING      shift, and go to state 48
    LP          shift, and go to state 49
    LBRACE      shift, and go to state 63

    ConstInitVal  go to state 64
    LVal          go to state 52
    Exp           go to state 65
    LOrExp        go to state 54
    LAndExp       go to state 55
    EqExp         go to state 56
    RelExp        go to state 57
    AddExp        go to state 58
    MulExp        go to state 59
    UnaryExp      go to state 60
    PrimaryExp    go to state 61


State 37

    9 ConstDefList: ConstDefList COMMA ConstDef .

    $default  reduce using rule 9 (ConstDefList)


State 38

   37 Block: LBRACE . BlockItem RBRACE

    $default  reduce using rule 38 (BlockItem)

    BlockItem  go to state 66


State 39

   25 FuncDef: BType ID LP RP Block .

    $default  reduce using rule 25 (FuncDef)


State 40

   26 FuncDef: BType ID LP FuncFParams RP . Block

    LBRACE  shift, and go to state 38

    Block  go to state 67


State 41

   31 FuncFParams: FuncFParams COMMA . FuncFParam

    VOID   shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3

    FuncFParam  go to state 68
    BType       go to state 31


State 42

   27 FuncFParam: BType ID .
   28           | BType ID . LBRACK RBRACK
   29           | BType ID . LBRACK RBRACK NonEmptyConstSubscriptList

    LBRACK  shift, and go to state 69

    $default  reduce using rule 27 (FuncFParam)


State 43

   79 UnaryExp: '+' . UnaryExp

    '+'         shift, and go to state 43
    '-'         shift, and go to state 44
    ID          shift, and go to state 45
    NUMBER      shift, and go to state 46
    CHAR_CONST  shift, and go to state 47
    STRING      shift, and go to state 48
    LP          shift, and go to state 49

    LVal        go to state 52
    UnaryExp    go to state 70
    PrimaryExp  go to state 61


State 44

   80 UnaryExp: '-' . UnaryExp

    '+'         shift, and go to state 43
    '-'         shift, and go to state 44
    ID          shift, and go to state 45
    NUMBER      shift, and go to state 46
    CHAR_CONST  shift, and go to state 47
    STRING      shift, and go to state 48
    LP          shift, and go to state 49

    LVal        go to state 52
    UnaryExp    go to state 71
    PrimaryExp  go to state 61


State 45

   48 LVal: ID . SubscriptList
   82 PrimaryExp: ID . LP RP
   83           | ID . LP FuncRParams RP

    LP  shift, and go to state 72

    $default  reduce using rule 46 (SubscriptList)

    SubscriptList  go to state 73


State 46

   85 PrimaryExp: NUMBER .

    $default  reduce using rule 85 (PrimaryExp)


State 47

   87 PrimaryExp: CHAR_CONST .

    $default  reduce using rule 87 (PrimaryExp)


State 48

   86 PrimaryExp: STRING .

    $default  reduce using rule 86 (PrimaryExp)


State 49

   81 PrimaryExp: LP . Exp RP

    '+'         shift, and go to state 43
    '-'         shift, and go to state 44
    ID          shift, and go to state 45
    NUMBER      shift, and go to state 46
    CHAR_CONST  shift, and go to state 47
    STRING      shift, and go to state 48
    LP          shift, and go to state 49

    LVal        go to state 52
    Exp         go to state 74
    LOrExp      go to state 54
    LAndExp     go to state 55
    EqExp       go to state 56
    RelExp      go to state 57
    AddExp      go to state 58
    MulExp      go to state 59
    UnaryExp    go to state 60
    PrimaryExp  go to state 61


State 50

